--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,14 @@
             <version>2.0.8</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+
+
         <!--自定义配置-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
